--- a/src/index.css
+++ b/src/index.css
@@ -19,13 +19,37 @@ body {
   background-position: 50% 40%;
 }
 
+.box {
+  box-shadow: 5px 5px 10px 10px rgba(0, 0, 0, 0.2);
+  background-color: #f6f6f6;
+  border-radius: 15px;
+}
+
+.form {
+  display: grid;
+  margin: 0;
+  padding: 10px;
+  grid-template-rows: 1fr;
+  grid-gap: 20px;
+}
+
+input {
+  padding: 10px;
+  width: 100%;
+  margin: 10px 0;
+  border-radius: 5px;
+  border: none;
+  font-size: 14px;
+  background-color: white;
+}
+
 
 h1 {
-  font-size: 40px;
+  font-size: 35px;
 }
 
 h3 {
-  font-size: 25px;
+  font-size: 20px;
 }
 
 a {
@@ -42,6 +66,11 @@ li {
   text-decoration: none;
 }
 
+select {
+  appearance: none;
+  font-size: 14px;
+}
+
 .container {
   width: 90%;
   margin-left: auto;
@@ -56,7 +85,7 @@ li {
   font-size: 20px;
   margin-left: auto;
   margin-right: auto;
-  margin: 20px;
+  margin: 20px 0;
   padding: 10px;
 }
 
@@ -72,8 +101,13 @@ li {
   color: white !important;
   background: #e86c6d;
   border: solid;
+  border-color: #e86c6d;
   border-radius: 5px;
   padding: 5px;
+}
+
+button:disabled {
+  opacity: 0.6;
 }
 
 /* Login / Register */
@@ -108,13 +142,14 @@ li {
   overflow: hidden;
 }
 
+
 .login-register-form-header {
   margin: 0;
   background-color: #e86c6d;
   padding: 20px;
 }
 
-form {
+.add-listing-container form {
   padding: 30px;
   width: 90%;
   margin-left: auto;
@@ -124,6 +159,7 @@ form {
 .login-register-form-content p{
   margin: 0;
 }
+
 
 .login-register-form-input {
   width: 100%;
@@ -192,14 +228,6 @@ form {
   padding: 0;
 }
 
-.add-listing-form-fields {
-  display: grid;
-  margin: 0;
-  padding: 10px;
-  grid-template-rows: 1fr;
-  grid-gap: 20px;
-}
-
 .checkbox-container {
   margin-top: 10px;
 }
@@ -226,14 +254,13 @@ form {
 }
 
 .add-listing-form-input-container input, select {
-  padding: 15px;
+  padding: 10px;
   width: 100%;
   margin: 5px;
   border-radius: 5px;
   border: none;
   font-size: 14px;
   background-color: white;
-  color: #8a8888;
 }
 
 .add-listing-form-input-container select {
@@ -358,7 +385,79 @@ form {
 }
 
 
+/* Find parking */
+.find-parking-container {
+  display: grid;
+}
 
-/* .nav li:first-child {
-  padding-left: 0;
-} */
+.find-parking-container .header {
+  text-align: center;
+}
+
+.find-parking-container hr{
+  width: 25%;
+  height: 5px;
+  border: 0;
+  border-top: 4px solid #e86c6d;
+  padding: 0;
+}
+
+.find-parking-container .header h1 {
+  color: #e86c6d;
+  font-size: 30px;
+}
+
+.find-parking-container .body .header p{
+  margin: 0;
+}
+
+.find-parking-container .body .header h3{
+  margin-bottom: 5px;
+}
+
+.find-parking-container .body {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px;
+  padding-top: 5px;
+  margin-top: 20px;
+}
+
+
+.find-parking-container .search-body {
+  display: grid;
+  grid-template-columns: 1.5fr 0.5fr;
+  grid-gap: 20px;
+}
+
+.find-parking-container .search-body button {
+  color: white;
+  background-color: #e86c6d;
+  border: none;
+  font-size: 20px;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 7px 0;
+}
+
+.find-parking-container .body .header {
+  margin-bottom: 40px;
+}
+
+.enquire button {
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.enquire .button {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.map {
+  margin: 30px 0;
+}
