--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ a {
   text-decoration: none;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 .white-background {
   background-color: white;
 }
@@ -82,7 +86,7 @@ select {
 }
 
 .container {
-  width: 90%;
+  width: 85%;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 40px;
@@ -158,7 +162,15 @@ button:disabled {
 
 .home .hero.one {
   grid-template-columns: 1fr 1fr;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+.home .hero.one span {
+  background-color: #e86c6d;
+  padding: 5px 12px;
+  border-radius: 10px;
+  color: white;
 }
 
 .background-grey {
@@ -496,7 +508,11 @@ button:disabled {
   padding-bottom: 20px;
   text-transform: uppercase;
   font-family: 'Raleway', sans-serif !important;
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
 }
+
 
 .nav-container {
   display: flex;
@@ -516,6 +532,10 @@ button:disabled {
   text-decoration: none;
 }
 
+.nav-container li a:hover {
+  color: #e86c6d;
+}
+
 .nav-container li .active {
   color: #e86c6d;
 }
@@ -526,6 +546,65 @@ button:disabled {
 
 .nav-menu-icon {
   height: 40px;
+}
+
+/* Footer */
+.footer {
+  color: #b9b9b9;
+  font-family: 'Raleway', sans-serif !important;
+  font-size: 14px;
+  margin-top: 80px;
+}
+
+.footer h3 {
+  color: #e86c6d;
+}
+
+.footer hr {
+  margin-top: 30px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 0;
+  border-top: 1px solid #b9b9b9;
+  padding: 0;
+}
+
+.footer .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px 0;
+}
+
+.footer h3, ul {
+  margin: 0;
+}
+
+.footer .logo {
+  text-align: center;
+}
+
+.footer .logo img {
+  height: 80px;
+}
+
+.footer nav {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  color: black;
+}
+
+.footer nav a {
+  color: black;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.footer nav a:hover {
+  color: #e86c6d;
 }
 
 
@@ -551,11 +630,11 @@ button:disabled {
   font-size: 30px;
 }
 
-.find-parking-container .body .header p{
+.find-parking-container .body .header p {
   margin: 0;
 }
 
-.find-parking-container .body .header h3{
+.find-parking-container .body .header h3 {
   margin-bottom: 5px;
 }
 
