added registration handler

--- a/src/index.css
+++ b/src/index.css
@@ -404,6 +404,7 @@ button:disabled {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  padding: 40px;
 }
 
 .login-register-logo {
