Initial dashboard UI

--- a/src/index.css
+++ b/src/index.css
@@ -131,7 +131,7 @@ button:disabled {
 
 /* Home */
 .home {
-  grid-gap: 60px;
+  grid-gap: 30px;
   margin: 5px 0;
 }
 
@@ -481,14 +481,14 @@ button:disabled {
   display: grid;
   grid-gap: 40px;
   grid-template-columns: 1.2fr 0.8fr;
+  padding: 60px 0;
 }
 
+
 .add-listing-form-container {
-  /* background-color: white; */
   box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.2);
   background-color: #f7f6f6;
   width: 90%;
-  margin-right: auto;
   margin-top: auto;
   margin-bottom: auto;
 }
@@ -571,10 +571,6 @@ button:disabled {
 .add-listing-message-container {
   display: grid;
   grid-template-rows: 0.2fr 1.8fr;
-  /* top:0;
-  bottom: 0;
-  left: 0;
-  right: 0; */
   margin-left: auto;
   width: 90%;
   text-align: right;
@@ -858,4 +854,30 @@ button:disabled {
 
 .find-parking-container .thank-you .redirect p {
   font-size: 10px;
+}
+
+/* Dashboard */
+.dashboard {
+  display: grid;
+  grid-template-columns: 0.3fr 0.7fr;
+}
+
+.dashboard .user {
+  display: grid;
+  grid-template-rows: 0.3fr 0.7fr;
+}
+
+.dashboard .parking .navigation {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.dashboard .parking .listing {
+  display: grid;
+  grid-template-columns: 0.3fr 0.7fr;
+}
+
+.dashboard .parking .details {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
