--- a/src/index.css
+++ b/src/index.css
@@ -52,15 +52,30 @@ button:hover {
   grid-gap: 20px;
 }
 
-input {
+input, select {
   padding: 10px;
   width: 100%;
   margin: 10px 0;
-  border-radius: 5px;
-  border: none;
   font-size: 14px;
   background-color: white;
+  border: 1px solid #f1f1f1 !important;
+  border-radius: 0;
 }
+
+select {
+  appearance: none;
+}
+
+/* .login-register .form input {
+  width: 100%;
+  padding: 15px;
+  margin: 0;
+  border: 1px solid #f1f1f1;
+  border-radius: initial;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 16px;
+} */
 
 
 h1 {
@@ -93,10 +108,11 @@ li {
 }
 
 
-select {
-  appearance: none;
-  font-size: 14px;
-}
+
+
+.Modal {
+  padding: 0;
+ }
 
 .container {
   width: 85%;
@@ -135,14 +151,12 @@ select {
   margin-right: auto;
   margin: 20px 0;
   padding: 10px;
-  border-radius: 5px;
 }
 
 .btn-transparent {
   color: #e86c6d !important;
   background: none;
   border: solid;
-  border-radius: 5px;
   padding: 5px;
 }
 
@@ -151,7 +165,6 @@ select {
   background: #e86c6d;
   border: solid;
   border-color: #e86c6d;
-  border-radius: 5px;
   padding: 5px;
 }
 
@@ -467,7 +480,6 @@ button:disabled {
   max-width: 40%;
   margin-left: auto;
   margin-right: auto;
-  z-index: 1;
   overflow: hidden;
 }
 
@@ -485,12 +497,16 @@ button:disabled {
   border: none;
   font-weight: 500;
   font-size: 20px;
-  padding: 10px 0;
+  padding: 15px 0;
+  border-bottom: 2px solid white;
+  /* padding-bottom: 15px; */
 }
 
 .login-register .form-container button:disabled {
   opacity: 1;
   color: #e86c6d;
+  border-bottom: 2px solid;
+  padding: 15px 0 !important;
 }
 
 .login-register .form {
@@ -499,7 +515,7 @@ button:disabled {
 
 .login-register .form .name-container {
   display: grid;
-  grid-template-columns: 0.3fr 0.7fr;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
 }
 
@@ -617,7 +633,6 @@ button:disabled {
   padding: 10px;
   width: 100%;
   margin: 5px;
-  border-radius: 5px;
   border: none;
   font-size: 14px;
   background-color: white;
@@ -630,7 +645,6 @@ button:disabled {
 
 .add-listing-form-button {
   margin: 10px;
-  border-radius: 5px;
   width: 30%;
 }
 
@@ -817,15 +831,23 @@ button:disabled {
 
 
 /* Find parking */
+
+.fa-ellipsis-v {
+  color: grey !important;
+  font-size: 10px;
+  margin-left: 10px;
+}
+
 .find-parking-container {
   display: grid;
+  padding-top: 0;
 }
 
 .find-parking-container .header {
   text-align: center;
 }
 
-.find-parking-container hr{
+.find-parking-container hr {
   width: 25%;
   height: 5px;
   border: 0;
@@ -838,6 +860,12 @@ button:disabled {
   font-size: 30px;
 }
 
+.find-parking-container .body {
+  display: grid;
+  grid-template-columns: 0.3fr 0.7fr;
+  grid-gap: 20px;
+}
+
 .find-parking-container .body .header p {
   margin: 0;
 }
@@ -847,7 +875,6 @@ button:disabled {
 }
 
 .find-parking-container .body {
-  width: 50%;
   margin-left: auto;
   margin-right: auto;
   padding: 40px;
@@ -855,11 +882,15 @@ button:disabled {
   margin-top: 20px;
 }
 
+.find-parking-container .listing h3 {
+  font-weight: 500;
+}
+
 
 .find-parking-container .search-body {
   display: grid;
-  grid-template-columns: 1.5fr 0.5fr;
-  grid-gap: 20px;
+  grid-template-columns: 1fr;
+  grid-gap: 5px;
 }
 
 .find-parking-container .search-body button {
@@ -867,7 +898,6 @@ button:disabled {
   background-color: #e86c6d;
   border: none;
   font-size: 20px;
-  border-radius: 5px;
   padding: 10px;
   margin: 7px 0;
 }
@@ -880,12 +910,48 @@ button:disabled {
   margin-bottom: 40px;
 }
 
+.find-parking-container .listings li {
+  padding: 10px 0;
+}
+
+.find-parking-container .listings .individual-listing {
+  display: grid;
+  grid-template-columns: 0.4fr 0.6fr;
+  background-color: white;
+}
+
+.find-parking-container .listings .details {
+  padding: 10px 0;
+}
+
+.find-parking-container .listings .individual-listing h3 {
+  font-weight: 500;
+  font-size: 16px;
+  margin: 0;
+}
+
+.find-parking-container .listings .individual-listing h5 {
+  font-weight: 300;
+  font-size: 14px;
+}
+
+.find-parking-container .listings .individual-listing p {
+  font-weight: 300;
+  font-size: 12px;
+}
+
+.find-parking-container .listings .individual-listing button {
+  font-weight: 100;
+  font-size: 12px;
+  margin: 0;
+}
+
+
 .enquire {
   text-align: center;
 }
 
 .find-parking-container .enquire button, .find-parking-container .thank-you button {
-  border-radius: 5px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -920,6 +986,66 @@ button:disabled {
 
 .find-parking-container .thank-you .redirect p {
   font-size: 10px;
+}
+
+/* Rent Parking */
+.rent-parking {
+  width: 40%;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.rent-parking .container {
+  margin-top: auto;
+  margin-bottom: auto;
+  padding: 40px 30px;
+}
+
+.rent-parking .parking-information .header {
+  color: #4a4a4a;
+}
+
+.rent-parking .parking-information .header h3 {
+  margin: 0;
+  font-weight: 500;
+}
+
+.rent-parking .parking-information .listing {
+  display: grid;
+  grid-template-columns: 0.4fr 0.6fr;
+}
+
+.rent-parking .parking-information .listing h3, h5 {
+  font-weight: 100;
+}
+
+.rent-parking .parking-information .listing p {
+  font-weight: 300;
+}
+
+.rent-parking .parking-information .listing .details {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 40px;
+}
+
+.rent-parking .tenure-information h3 {
+  font-weight: 500;
+}
+
+.rent-parking .tenure-information label {
+  font-weight: 300;
+}
+
+.rent-parking .tenure-information a {
+  font-size: 12px;
+  font-weight: 300;
+}
+
+.rent-parking .tenure-information .vehicle-registered {
+  display: grid;
+  grid-template-columns: 0.3fr 0.7fr;
+  grid-gap: 20px;
 }
 
 /* Dashboard */
