--- a/src/index.css
+++ b/src/index.css
@@ -849,6 +849,7 @@ button:disabled {
 .find-parking-container {
   display: grid;
   padding-top: 0;
+  width: 95%;
 }
 
 .find-parking-container .header {
@@ -868,11 +869,6 @@ button:disabled {
   font-size: 30px;
 }
 
-.find-parking-container .body {
-  display: grid;
-  grid-template-columns: 0.3fr 0.7fr;
-  grid-gap: 20px;
-}
 
 .find-parking-container .body .header p {
   margin: 0;
@@ -883,11 +879,15 @@ button:disabled {
 }
 
 .find-parking-container .body {
+  display: grid;
+  grid-template-columns: 0.3fr 0.7fr;
+  grid-gap: 20px;
   margin-left: auto;
   margin-right: auto;
-  padding: 40px;
-  padding-top: 5px;
-  margin-top: 20px;
+}
+
+.find-parking-container .listing {
+  width: 90%
 }
 
 .find-parking-container .listing h3 {
@@ -922,6 +922,10 @@ button:disabled {
   padding: 10px 0;
 }
 
+.find-parking-container .listings button {
+  padding: 5px;
+}
+
 .find-parking-container .listings .individual-listing {
   display: grid;
   grid-template-columns: 0.4fr 0.6fr;
@@ -930,7 +934,12 @@ button:disabled {
 }
 
 .find-parking-container .listings .individual-listing img {
+  height: 100%;
   width: 100%;
+}
+
+.find-parking-container .listings .individual-listing h3, h5, p {
+  margin: 5px !important;
 }
 
 .find-parking-container .listings .details {
@@ -1038,6 +1047,7 @@ button:disabled {
 }
 
 .rent-parking .parking-information .listing img {
+  height: 100%;
   width: 100%;
 }
 
