--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 button:hover {
@@ -439,9 +440,6 @@ button:disabled {
 
 .owners .signup p {
   font-size: 25px;
-  width: 40%;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 /* Login / Register */
