--- a/django-src/templates/register.html
+++ b/django-src/templates/register.html
@@ -13,7 +13,7 @@
 		<meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>*|MC:SUBJECT|*</title>
+		<title>Welcome to ParkIt {{first_name}} {{last_name}}</title>
         
     <style type="text/css">
 		p{
