--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,9 @@ li {
   text-decoration: none;
 }
 
-
+.fa-pencil {
+  font-size: 12px;
+}
 
 
 .Modal {
@@ -922,6 +924,60 @@ button:disabled {
   height: 40px;
 }
 
+.nav .user-avatar-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.nav .user-avatar {
+  height: 40px;
+  width: 40px;
+}
+
+.nav .user-name {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.nav i {
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.nav .down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+.dropdown-content {
+    margin-top: 10px;
+    display: none;
+    position: absolute;
+    background-color: white;
+    /* width: 10% !important; */
+    width: 120px;
+    /* width: 20%; */
+    border: solid;
+    border-width: thin;
+    z-index: 1;
+    padding: 10px;
+}
+
+.dropdown-content hr {
+  width: 100%;
+  /* text-align: left !important; */
+  /* margin-left: auto !important; */
+  margin-right: auto !important;
+}
+
+
+
+/* .dropdown-content a:hover {background-color: #ddd} */
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 /* Footer */
 .footer {
   color: #b9b9b9;
@@ -1238,15 +1294,20 @@ button:disabled {
   grid-gap: 40px;
 }
 
+.dashboard hr {
+  margin: 0;
+
+}
+
 .dashboard p, span {
   color: #8a8888;
   font-size: 14px;
   font-weight: 300;
 }
 
-dashboard h3, h5, p, span {
+/* .dashboard h3, h5, p, span {
   margin: 5px 0 !important;
-}
+} */
 
 .dashboard h3 {
   font-weight: 500;
@@ -1268,7 +1329,7 @@ dashboard h3, h5, p, span {
   padding: 20px 0;
 }
 
-.dashboard .user .avatar img {
+.user-avatar {
   height: 100px;
   width: 100px;
   border-radius: 50%;
@@ -1276,6 +1337,18 @@ dashboard h3, h5, p, span {
 
 .dashboard .user .contact {
   width: 80%;
+}
+
+.dashboard .user .contact .edit {
+  display: grid;
+  grid-template-columns: 0.9fr 0.1fr;
+  grid-gap: 5px;
+}
+
+.dashboard .user .contact .edit i {
+  margin-top: auto;
+  margin-bottom: auto;
+  cursor: pointer;
 }
 
 .dashboard .parking {
@@ -1289,7 +1362,7 @@ dashboard h3, h5, p, span {
 }
 
 .dashboard .parking h3, h5, p {
-  margin: 10px 0;
+  margin: 10px 0 !important;
 }
 
 .dashboard .parking .navigation {
@@ -1314,6 +1387,10 @@ dashboard h3, h5, p, span {
   padding: 15px 0 !important;
 }
 
+/* .dashboard .listing li {
+  padding: 10px !important;
+} */
+
 /* .login-register .form-container button {
   border: none;
   font-weight: 500;
@@ -1333,15 +1410,28 @@ dashboard h3, h5, p, span {
   display: grid;
   grid-template-columns: 0.4fr 0.6fr;
   grid-gap: 30px;
+  border-bottom: solid;
+  border-width: thin;
+  border-color: rgba(74, 74, 74, 0.2);
+
 }
 
 .dashboard .parking .listing-container .thumbnail img {
   width: 100%;
-  height: 100% !important;
+  height: 100%;
+}
+
+.dashboard .parking .listing-container .thumbnail {
+  width: 100%;
+  height: 100%;
 }
 
 .dashboard .listing li {
   padding: 0;
+}
+
+.dashboard .parking .details-container {
+  padding: 20px 0;
 }
 
 .dashboard .parking .details {
